--- a/forum/forum.css
+++ b/forum/forum.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Arial', sans-serif;
     background-color: #1a1a1a;
-    margin: 0;
+    margin-top: 2%;
     padding: 0;
     height: 100vh;
     display: flex;
